phonon-backend-xine (4:4.6.0really4.4.4-3) UNRELEASED; urgency=low


 -- Modestas Vainius <modax@debian.org>  Fri, 11 Mar 2011 22:22:47 +0200

phonon-backend-xine (4:4.6.0really4.4.4-2) experimental; urgency=low

  * Add phonon-backend-xine-dbg package.

 -- Modestas Vainius <modax@debian.org>  Sat, 05 Mar 2011 04:41:56 +0200

phonon-backend-xine (4:4.6.0really4.4.4-1) experimental; urgency=low

  * Initial release (based on phonon 4:4.6.0really4.4.3-1).

 -- Modestas Vainius <modax@debian.org>  Sat, 05 Mar 2011 04:37:14 +0200