@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Modestas Vainius <modax@debian.org>
 Build-Depends: cdbs (>= 0.4.51), debhelper (>= 7.4.13), cmake (>= 2.6.2),
- pkg-kde-tools (>= 0.9), automoc, libphonon-dev (>= 4:4.6.0really4.4.4),
+ pkg-kde-tools (>= 0.11), automoc, libphonon-dev (>= 4:4.6.0really4.4.4),
  libphononexperimental-dev (>= 4:4.6.0really4.4.4),
  libqt4-dev (>= 4.5), libxine-dev (>= 1.1.16.3), libxcb1-dev, libx11-dev
 Build-Conflicts: libxine2
