@@ -1,5 +1,6 @@
 phonon-backend-xine (4:4.6.0really4.4.4-3) UNRELEASED; urgency=low
 
+  * Port to dhmk based qt-kde-team/2/*, require pkg-kde-tools 0.11.
 
  -- Modestas Vainius <modax@debian.org>  Fri, 11 Mar 2011 22:22:47 +0200
 
